# app.js
@@ -22,6 +22,8 @@ var clientByEmail = require('./routes/client');
 var register = require('./routes/register');
 var auth = require('./routes/auth');
 var entryNoAuth = require('./routes/entryNoAuth');
+var getEntryNoAuth = require('./routes/entryNoAuth');
+var changeEntryNoAuth = require('./routes/entryNoAuth');
 var clientUpdate = require('./routes/clientUpdate');
 var getClientPassword = require('./routes/client');
 var resetPassword = require('./routes/client');
@@ -32,9 +34,9 @@ var getCarByIdCar = require('./routes/cars');
 var changeDataCar = require('./routes/cars');
 var deleteDataCar = require('./routes/cars');
 var addEntry = require('./routes/entry');
-var getEntryNoAuth = require('./routes/entryNoAuth');
 var getEntry = require('./routes/entry');
 var getEntryById = require('./routes/entry');
+var changeEntry = require('./routes/entry');
 var addContract = require('./routes/contract');
 var getContract = require('./routes/contract');
 var getContractByIdClient = require('./routes/contract');
@@ -80,6 +82,7 @@ app.use('/register', register);
 app.use('/auth', auth);
 app.use('/entry_no_auth', entryNoAuth);
 app.use('/entry_no_auth/get', getEntryNoAuth);
+app.use('/entry_no_auth/change', changeEntryNoAuth);
 app.use('/user', clientByEmail);
 app.use('/user/pass', getClientPassword);
 app.use('/user/reset', resetPassword);
@@ -93,6 +96,7 @@ app.use('/car/delete', deleteDataCar);
 app.use('/entry', addEntry);
 app.use('/entry/get', getEntry);
 app.use('/entry/get_id', getEntryById);
+app.use('/entry/change', changeEntry);
 app.use('/contract/add', addContract);
 app.use('/contract', getContract);
 app.use('/contract/get', getContractByIdContract);
