# swagger.json
@@ -118,6 +118,14 @@
         "summary": "Вывод таблицы записей для неавторизованных клиентов"
       }
     },
+    "/entry_no_auth/change": {
+      "put": {
+        "tags": [
+          "API"
+        ],
+        "summary": "Изменение отметки записи"
+      }
+    },
 
     "/user": {
       "get": {
@@ -224,6 +232,14 @@
           "API"
         ],
         "summary": "Вывод записей по идентификатору пользователя"
+      }
+    },
+    "/entry/change": {
+      "put": {
+        "tags": [
+          "API"
+        ],
+        "summary": "Изменение отметки записи"
       }
     },
 
